[package]
name = "smoltcp-nal"
version = "0.2.1"
authors = ["Ryan Summers <ryan.summers@vertigo-designs.com>"]
edition = "2018"
license = "MIT"
description = "embedded-nal implementation for smoltcp"
keywords = ["smoltcp", "embedded-nal", "tcp"]
categories = ["network-programming", "no-std"]
repository = "https://github.com/quartiq/smoltcp-nal.git"

[dependencies]
heapless = "0.7"
embedded-nal = "0.6"
embedded-time = "0.12"

[dependencies.nanorand]
version = "0.6.1"
default-features = false
features = ["wyrand"]

[dependencies.smoltcp]
version = "0.9"
features = ["medium-ethernet", "proto-ipv6", "socket-tcp", "socket-dhcpv4", "socket-udp"]
default-features = false

[dependencies.shared-bus]
version = "0.2.2"
optional = true

[features]
shared-stack = ["shared-bus", "shared-bus/cortex-m"]
