[package]
name = "smoltcp-nal"
version = "0.6.0"
authors = ["Ryan Summers <ryan.summers@vertigo-designs.com>"]
edition = "2018"
license = "MIT"
description = "embedded-nal implementation for smoltcp"
keywords = ["smoltcp", "embedded-nal", "tcp"]
categories = ["network-programming", "no-std"]
repository = "https://github.com/quartiq/smoltcp-nal.git"
rust-version = "1.77.0"

[dependencies]
heapless = "0.7"
embedded-nal = "0.9"
embedded-time = "0.12"

[dependencies.nanorand]
version = "0.7.0"
default-features = false
features = ["wyrand"]

[dependencies.smoltcp]
version = "0.11"
features = [
    "medium-ethernet",
    "proto-ipv6",
    "socket-tcp",
    "socket-dns",
    "socket-dhcpv4",
    "socket-udp",
]
default-features = false

[dependencies.shared-bus]
version = "0.3.1"
optional = true

[features]
shared-stack = ["shared-bus", "shared-bus/cortex-m"]
